syntax = "proto3";

package models;

option go_package = "github.com/yachnytskyi/golang-mongo-grpc/pkg/pb/models";

message LoginUserInput {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string status = 1;
    string access_token = 2;
    string refresh_token = 3;
}